@@ -1,3 +1,10 @@
+2003-03-19  Dom Lachowicz <cinamod@hotmail.com>
+
+	* configure.in: Disable libcroco support until libcroco implements
+	the 1 remaining fn that I need from it
+	* rsvg-styles.c (rsvg_parse_style_attrs): Handle tag#id, tag.klazz#id, 
+	and tag.klazz much more properly
+	
 2003-03-18  Dom Lachowicz <cinamod@hotmail.com>
 
 	* configure.in: Updates for optional libcroco support
